--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-x<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="sk">
 <head>
     <meta charset="UTF-8">
@@ -18,6 +18,79 @@ x<!DOCTYPE html>
             align-items: center;
             justify-content: center;
             min-height: 100vh;
+        }
+
+        /* Navbar styling */
+        .header {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background-color: #1a1a1a;
+            padding: 10px 0;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            display: flex;
+            justify-content: center;
+            z-index: 1000;
+        }
+
+        .navbar {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+        }
+
+        .navbar a {
+            color: #ffffff;
+            text-decoration: none;
+            padding: 10px 20px;
+            font-size: 1em;
+            transition: color 0.3s;
+        }
+
+        /* Dropdown styling */
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+
+        .dropdown > a::after {
+            content: " ▼";
+            font-size: 0.8em;
+        }
+
+        /* Animated dropdown menu */
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #333333;
+            min-width: 160px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            z-index: 1;
+            top: 100%;
+            opacity: 0;
+            transform: translateY(-10px);
+            transition: opacity 0.4s ease, transform 0.4s ease;
+            border-radius: 5px;
+        }
+
+        .dropdown-content a {
+            color: #ffffff;
+            padding: 10px 20px;
+            text-decoration: none;
+            display: block;
+            text-align: left;
+            transition: background 0.3s;
+        }
+
+        .dropdown-content a:hover {
+            background-color: #444;
+        }
+
+        /* Dropdown animation on hover */
+        .dropdown:hover .dropdown-content {
+            display: block;
+            opacity: 1;
+            transform: translateY(0);
         }
 
         /* Main container styling */
@@ -65,123 +138,66 @@ x<!DOCTYPE html>
             margin: 20px auto;
         }
     </style>
-
-    <!-- Inline script to generate the navbar and add consistent styling -->
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const navbarHTML = `
-                <style>
-                    .header { position: fixed; top: 0; width: 100%; background-color: #1a1a1a; padding: 10px 0; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); display: flex; justify-content: center; z-index: 1000; }
-                    .navbar { display: flex; align-items: center; gap: 20px; }
-                    .navbar a { color: #ffffff; text-decoration: none; padding: 10px 20px; font-size: 1em; }
-                    .dropdown { position: relative; display: inline-block; }
-                    .dropdown > a::after { content: " ▼"; font-size: 0.8em; }
-                    .dropdown-content { display: none; position: absolute; background-color: #333333; min-width: 160px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); z-index: 1; top: 100%; opacity: 0; transform: translateY(-10px); transition: opacity 0.3s ease, transform 0.3s ease; }
-                    .dropdown-content a { color: #ffffff; padding: 10px 20px; text-decoration: none; display: block; text-align: left; }
-                    .dropdown-content a:hover { background-color: #444; }
-                    .dropdown:hover .dropdown-content { display: block; opacity: 1; transform: translateY(0); }
-                </style>
-                <header class="header">
-                    <div class="navbar">
-                        <a href="index.html">Domov</a>
-                        <div class="dropdown">
-                            <a href="#">Informácie</a>
-                            <div class="dropdown-content">
-                                <a href="otvaracie_casy.html">Otvaracie časy</a>
-                                <a href="pravidla.html">Pravidlá servera</a>
-                                <a href="galeria.html">Galéria</a>
-                                <a href="novinky.html">Novinky</a>
-                                <a href="http://p-bc.gl.at.ply.gg:56345">Mapa</a>
-                            </div>
-                        </div>
-                        <a href="https://discord.gg/dTTdNrgBSM" target="_blank">Discord</a>
-                    </div>
-                </header>
-            `;
-            document.body.insertAdjacentHTML("afterbegin", navbarHTML);
-        });
-    </script>
 </head>
 <body>
-    <!-- Main content container -->
-    <div class="container">
-        <h1>Minecraft Server SOSCH</h1>
-        <div id="server-status" class="status">Kontrola stavu servera<span id="dots">...</span></div>
-        <div id="player-info" class="info"></div>
 
-        <div class="info">
-            <h3>IP JAVA (PC):</h3>
-            <p>community-killed.gl.joinmc.link</p>
+<!-- Navbar HTML structure -->
+<header class="header">
+    <div class="navbar">
+        <a href="index.html">Domov</a>
+        <div class="dropdown">
+            <a href="#">Informácie</a>
+            <div class="dropdown-content">
+                <a href="otvaracie_casy.html">Otvaracie časy</a>
+                <a href="pravidla.html">Pravidlá servera</a>
+                <a href="galeria.html">Galéria</a>
+                <a href="novinky.html">Novinky</a>
+                <a href="http://p-bc.gl.at.ply.gg:56345">Mapa</a>
+            </div>
         </div>
+        <a href="https://discord.gg/dTTdNrgBSM" target="_blank">Discord</a>
+    </div>
+</header>
 
-        <div class="info">
-            <h3>IP a Port BEDROCK (Mobil, Konzoly):</h3>
-            <p>t-subscriptions.gl.at.ply.gg:3262</p>
-        </div>
+<!-- Main content container -->
+<div class="container">
+    <h1>Minecraft Server SOSCH</h1>
+    <div id="server-status" class="status">Kontrola stavu servera<span id="dots">...</span></div>
+    <div id="player-info" class="info"></div>
 
-        <hr>
-
-        <div class="info">
-            <h3>Discord:</h3>
-            <p><a href="https://discord.gg/dTTdNrgBSM" target="_blank">Pripojte sa na Discord</a></p>
-        </div>
+    <div class="info">
+        <h3>IP JAVA (PC):</h3>
+        <p>community-killed.gl.joinmc.link</p>
     </div>
 
-    <script>
-        const apiUrl = 'https://api.mcsrvstat.us/2/community-killed.gl.joinmc.link';
+    <div class="info">
+        <h3>IP a Port BEDROCK (Mobil, Konzoly):</h3>
+        <p>t-subscriptions.gl.at.ply.gg:3262</p>
+    </div>
 
-        function startLoadingDots(id) {
-            let dots = 0;
-            return setInterval(() => {
-                document.getElementById(id).textContent = '.'.repeat((dots % 4) + 1);
-                dots++;
-            }, 500);
-        }
+    <hr>
 
-        const dotsInterval = startLoadingDots("dots");
+    <div class="info">
+        <h3>Discord:</h3>
+        <p><a href="https://discord.gg/dTTdNrgBSM" target="_blank">Pripojte sa na Discord</a></p>
+    </div>
+</div>
 
-        async function checkServerStatus() {
-            try {
-                const response = await fetch(apiUrl);
-                const data = await response.json();
-                clearInterval(dotsInterval);
-                document.getElementById("dots").textContent = "";
+<script>
+    const apiUrl = 'https://api.mcsrvstat.us/2/community-killed.gl.joinmc.link';
 
-                const statusElement = document.getElementById("server-status");
-                const playersElement = document.getElementById("player-info");
+    function startLoadingDots(id) {
+        let dots = 0;
+        return setInterval(() => {
+            document.getElementById(id).textContent = '.'.repeat((dots % 4) + 1);
+            dots++;
+        }, 500);
+    }
 
-                if (data.online) {
-                    statusElement.textContent = "Server je Online";
-                    statusElement.classList.add("online");
-                    statusElement.classList.remove("offline");
+    const dotsInterval = startLoadingDots("dots");
 
-                    if (data.players) {
-                        const onlinePlayers = data.players.online;
-                        const maxPlayers = data.players.max;
-                        playersElement.innerHTML = `Počet hráčov online: ${onlinePlayers}/${maxPlayers}`;
-                    }
-                } else {
-                    statusElement.textContent = "Server je Offline";
-                    statusElement.classList.add("offline");
-                    statusElement.classList.remove("online");
-                    playersElement.innerHTML = "Server je offline, nemožno načítať štatistiky.";
-                }
-            } catch (error) {
-                console.error('Chyba pri kontrole stavu servera:', error);
-                clearInterval(dotsInterval);
-                document.getElementById("dots").textContent = "";
-
-                const statusElement = document.getElementById("server-status");
-                statusElement.textContent = "Server je Offline";
-                statusElement.classList.add("offline");
-                statusElement.classList.remove("online");
-
-                document.getElementById("player-info").innerHTML = "Server je offline, nemožno načítať štatistiky.";
-            }
-        }
-
-        checkServerStatus();
-        setInterval(checkServerStatus, 60000); // Check every 60 seconds
-    </script>
-</body>
-</html>
+    async function checkServerStatus() {
+        try {
+            const response = await fetch(apiUrl);
+            const data = await response.json();
+            clearInterval(dotsInterval
